# crypto-intelligence-agent

./: .gitignore  README.md  agent.py  app.py  binance_client.py  hello.py  news_client.py  pyproject.toml  rag.py
data/: knowledge.txt
